--- a/TODO
+++ b/TODO
@@ -1,7 +1,1 @@
-* Add a Contact Form API
-* Add some real tests. I've got this whole TDD thing backwards.
-* Deployment docs for generic VM's (like Slicehost)
-* Asset manager for uploading to S3
-* Squash bugs
-* ???
-* Profit!
+See http://fikus.lighthouseapp.com/projects/59205-fikus/overview
